// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeTheme should accept a theme name 1`] = `
Object {
  "breakpoints": Object {
    "large": "992px",
    "max": "1200px",
    "medium": "768px",
    "min": "320px",
    "mobile": "480px",
    "small": "480px",
  },
  "colors": Object {
    "background": Object {
      "active": Object {
        "base": "rgb(240, 240, 240)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "base": "rgb(255, 255, 255)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(247, 247, 247)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 191, 191)",
        "border": "rgb(165, 165, 165)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "backgroundAlt": Object {
      "active": Object {
        "base": "rgb(232, 232, 232)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "base": "rgb(247, 247, 247)",
        "border": "rgb(240, 240, 240)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(240, 240, 240)",
        "border": "rgb(232, 232, 232)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(187, 187, 187)",
        "border": "rgb(163, 163, 163)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "danger": Object {
      "active": Object {
        "base": "rgb(123, 21, 31)",
        "border": "rgb(186, 32, 47)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(220, 53, 69)",
        "border": "rgb(186, 32, 47)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(186, 32, 47)",
        "border": "rgb(220, 53, 69)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(174, 90, 98)",
        "border": "rgb(155, 105, 110)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "dark": Object {
      "active": Object {
        "base": "rgb(51, 51, 51)",
        "border": "rgb(38, 38, 38)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(26, 26, 26)",
        "border": "rgb(51, 51, 51)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(38, 38, 38)",
        "border": "rgb(51, 51, 51)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(76, 76, 76)",
        "border": "rgb(97, 97, 97)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "info": Object {
      "active": Object {
        "base": "rgb(12, 86, 98)",
        "border": "rgb(18, 130, 147)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(23, 162, 184)",
        "border": "rgb(18, 130, 147)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(18, 130, 147)",
        "border": "rgb(23, 162, 184)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(75, 145, 156)",
        "border": "rgb(96, 138, 144)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "light": Object {
      "active": Object {
        "base": "rgb(224, 224, 224)",
        "border": "rgb(232, 232, 232)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "base": "rgb(240, 240, 240)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(232, 232, 232)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(183, 183, 183)",
        "border": "rgb(161, 161, 161)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "neutral": Object {
      "active": Object {
        "base": "rgb(67, 67, 67)",
        "border": "rgb(102, 102, 102)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(127, 127, 127)",
        "border": "rgb(102, 102, 102)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(102, 102, 102)",
        "border": "rgb(127, 127, 127)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(127, 127, 127)",
        "border": "rgb(127, 127, 127)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "primary": Object {
      "active": Object {
        "base": "rgb(135, 90, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(255, 170, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(204, 136, 0)",
        "border": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 149, 64)",
        "border": "rgb(165, 140, 89)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "prominent": Object {
      "active": Object {
        "base": "rgb(135, 90, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(255, 170, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(204, 136, 0)",
        "border": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 149, 64)",
        "border": "rgb(165, 140, 89)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "secondary": Object {
      "active": Object {
        "base": "rgb(0, 83, 149)",
        "border": "rgb(0, 125, 225)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(26, 153, 255)",
        "border": "rgb(0, 125, 225)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(0, 125, 225)",
        "border": "rgb(26, 153, 255)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(77, 140, 191)",
        "border": "rgb(97, 135, 165)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "selected": Object {
      "active": Object {
        "base": "rgb(135, 90, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(255, 170, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(204, 136, 0)",
        "border": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 149, 64)",
        "border": "rgb(165, 140, 89)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "success": Object {
      "active": Object {
        "base": "rgb(21, 89, 37)",
        "border": "rgb(32, 134, 55)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(40, 167, 69)",
        "border": "rgb(32, 134, 55)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(32, 134, 55)",
        "border": "rgb(40, 167, 69)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(84, 147, 98)",
        "border": "rgb(101, 139, 110)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "tertiary": Object {
      "active": Object {
        "base": "rgb(0, 81, 81)",
        "border": "rgb(0, 122, 122)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(0, 153, 153)",
        "border": "rgb(0, 122, 122)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(0, 122, 122)",
        "border": "rgb(0, 153, 153)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(64, 140, 140)",
        "border": "rgb(89, 135, 135)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "typography": Object {
      "active": Object {
        "base": "rgb(0, 0, 0)",
        "border": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(0, 0, 0)",
        "border": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(0, 0, 0)",
        "border": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(64, 64, 64)",
        "border": "rgb(89, 89, 89)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "warning": Object {
      "active": Object {
        "base": "rgb(139, 104, 0)",
        "border": "rgb(210, 157, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(255, 193, 7)",
        "border": "rgb(210, 157, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(210, 157, 0)",
        "border": "rgb(255, 193, 7)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 160, 67)",
        "border": "rgb(165, 147, 91)",
        "readable": "rgb(0, 0, 0)",
      },
    },
  },
  "elements": Object {
    "buttons": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "background",
      "cursor": "pointer",
      "font": "control",
      "padding": Object {
        "bottom": "small",
        "left": "medium",
        "right": "medium",
        "top": "small",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
    },
    "controls": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "background",
      "cursor": "default",
      "font": "control",
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
    },
    "grid": Object {
      "columnMin": "280px",
      "gap": "small",
    },
    "links": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "color": "typography",
      "cursor": "pointer",
      "font": "link",
      "padding": Object {
        "bottom": "none",
        "left": "none",
        "right": "none",
        "top": "none",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "states": Object {
        "active": Object {
          "color": "secondary",
        },
        "base": Object {
          "border": Object {
            "bottom": Object {
              "style": "none",
              "width": "none",
            },
            "left": Object {
              "style": "none",
              "width": "none",
            },
            "right": Object {
              "style": "none",
              "width": "none",
            },
            "top": Object {
              "style": "none",
              "width": "none",
            },
          },
          "color": "typography",
          "cursor": "pointer",
          "font": "link",
          "padding": Object {
            "bottom": "none",
            "left": "none",
            "right": "none",
            "top": "none",
          },
          "radius": Object {
            "bottomLeft": "none",
            "bottomRight": "none",
            "topLeft": "none",
            "topRight": "none",
          },
        },
        "hover": Object {
          "color": "primary",
        },
        "inactive": Object {
          "border": Object {
            "bottom": Object {
              "style": "none",
              "width": "none",
            },
            "left": Object {
              "style": "none",
              "width": "none",
            },
            "right": Object {
              "style": "none",
              "width": "none",
            },
            "top": Object {
              "style": "none",
              "width": "none",
            },
          },
          "color": "typography",
          "cursor": "pointer",
          "font": "link",
          "padding": Object {
            "bottom": "none",
            "left": "none",
            "right": "none",
            "top": "none",
          },
          "radius": Object {
            "bottomLeft": "none",
            "bottomRight": "none",
            "topLeft": "none",
            "topRight": "none",
          },
        },
        "selected": Object {
          "border": Object {
            "bottom": Object {
              "style": "none",
              "width": "none",
            },
            "left": Object {
              "style": "none",
              "width": "none",
            },
            "right": Object {
              "style": "none",
              "width": "none",
            },
            "top": Object {
              "style": "none",
              "width": "none",
            },
          },
          "color": "typography",
          "cursor": "pointer",
          "font": "link",
          "padding": Object {
            "bottom": "none",
            "left": "none",
            "right": "none",
            "top": "none",
          },
          "radius": Object {
            "bottomLeft": "none",
            "bottomRight": "none",
            "topLeft": "none",
            "topRight": "none",
          },
        },
        "visited": Object {
          "color": "secondary",
        },
      },
    },
    "nav": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "color": "background",
      "currentItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "solid",
            "width": "tiny",
          },
          "left": Object {
            "style": "none",
            "width": "none",
          },
          "right": Object {
            "style": "none",
            "width": "none",
          },
          "top": Object {
            "style": "none",
            "width": "none",
          },
        },
        "color": "primary",
        "cursor": "default",
        "font": "compact",
        "padding": Object {
          "bottom": "small",
          "left": "medium",
          "right": "medium",
          "top": "small",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
      },
      "cursor": "pointer",
      "font": "compact",
      "padding": Object {
        "bottom": "small",
        "left": "medium",
        "right": "medium",
        "top": "small",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
    },
    "tables": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "background",
      "cursor": "default",
      "font": "compact",
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
    },
  },
  "name": "example-theme",
  "sizes": Object {
    "giant": "64px",
    "large": "24px",
    "medium": "16px",
    "none": "0px",
    "small": "12px",
    "tiny": "2px",
    "xLarge": "32px",
    "xSmall": "8px",
    "xxLarge": "48px",
    "xxSmall": "4px",
  },
  "typography": Object {
    "code": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Monaco, monospace",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "compact": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "control": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "emphasized": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "h1": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "3.21em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h2": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "2.36em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h3": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.64em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h4": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.29em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h5": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.15em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h6": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "heading": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "label": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "legal": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Times New Roman, serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "0.75em",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "link": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "underline",
        "style": "solid",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "paragraph": Object {
      "align": "justify",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "quote": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "strong": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "text": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
  },
}
`;

exports[`makeTheme should match snapshot 1`] = `
Object {
  "breakpoints": Object {
    "large": "992px",
    "max": "1200px",
    "medium": "768px",
    "min": "320px",
    "mobile": "480px",
    "small": "480px",
  },
  "colors": Object {
    "background": Object {
      "active": Object {
        "base": "rgb(240, 240, 240)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "base": "rgb(255, 255, 255)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(247, 247, 247)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 191, 191)",
        "border": "rgb(165, 165, 165)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "backgroundAlt": Object {
      "active": Object {
        "base": "rgb(232, 232, 232)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "base": "rgb(247, 247, 247)",
        "border": "rgb(240, 240, 240)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(240, 240, 240)",
        "border": "rgb(232, 232, 232)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(187, 187, 187)",
        "border": "rgb(163, 163, 163)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "danger": Object {
      "active": Object {
        "base": "rgb(123, 21, 31)",
        "border": "rgb(186, 32, 47)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(220, 53, 69)",
        "border": "rgb(186, 32, 47)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(186, 32, 47)",
        "border": "rgb(220, 53, 69)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(174, 90, 98)",
        "border": "rgb(155, 105, 110)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "dark": Object {
      "active": Object {
        "base": "rgb(51, 51, 51)",
        "border": "rgb(38, 38, 38)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(26, 26, 26)",
        "border": "rgb(51, 51, 51)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(38, 38, 38)",
        "border": "rgb(51, 51, 51)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(76, 76, 76)",
        "border": "rgb(97, 97, 97)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "info": Object {
      "active": Object {
        "base": "rgb(12, 86, 98)",
        "border": "rgb(18, 130, 147)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(23, 162, 184)",
        "border": "rgb(18, 130, 147)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(18, 130, 147)",
        "border": "rgb(23, 162, 184)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(75, 145, 156)",
        "border": "rgb(96, 138, 144)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "light": Object {
      "active": Object {
        "base": "rgb(224, 224, 224)",
        "border": "rgb(232, 232, 232)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "base": "rgb(240, 240, 240)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(232, 232, 232)",
        "border": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(183, 183, 183)",
        "border": "rgb(161, 161, 161)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "neutral": Object {
      "active": Object {
        "base": "rgb(67, 67, 67)",
        "border": "rgb(102, 102, 102)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(127, 127, 127)",
        "border": "rgb(102, 102, 102)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(102, 102, 102)",
        "border": "rgb(127, 127, 127)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(127, 127, 127)",
        "border": "rgb(127, 127, 127)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "primary": Object {
      "active": Object {
        "base": "rgb(135, 90, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(255, 170, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(204, 136, 0)",
        "border": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 149, 64)",
        "border": "rgb(165, 140, 89)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "prominent": Object {
      "active": Object {
        "base": "rgb(135, 90, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(255, 170, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(204, 136, 0)",
        "border": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 149, 64)",
        "border": "rgb(165, 140, 89)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "secondary": Object {
      "active": Object {
        "base": "rgb(0, 83, 149)",
        "border": "rgb(0, 125, 225)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(26, 153, 255)",
        "border": "rgb(0, 125, 225)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(0, 125, 225)",
        "border": "rgb(26, 153, 255)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(77, 140, 191)",
        "border": "rgb(97, 135, 165)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "selected": Object {
      "active": Object {
        "base": "rgb(135, 90, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(255, 170, 0)",
        "border": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(204, 136, 0)",
        "border": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 149, 64)",
        "border": "rgb(165, 140, 89)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "success": Object {
      "active": Object {
        "base": "rgb(21, 89, 37)",
        "border": "rgb(32, 134, 55)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(40, 167, 69)",
        "border": "rgb(32, 134, 55)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(32, 134, 55)",
        "border": "rgb(40, 167, 69)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(84, 147, 98)",
        "border": "rgb(101, 139, 110)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "tertiary": Object {
      "active": Object {
        "base": "rgb(0, 81, 81)",
        "border": "rgb(0, 122, 122)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(0, 153, 153)",
        "border": "rgb(0, 122, 122)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(0, 122, 122)",
        "border": "rgb(0, 153, 153)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(64, 140, 140)",
        "border": "rgb(89, 135, 135)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "typography": Object {
      "active": Object {
        "base": "rgb(0, 0, 0)",
        "border": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(0, 0, 0)",
        "border": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "base": "rgb(0, 0, 0)",
        "border": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "base": "rgb(64, 64, 64)",
        "border": "rgb(89, 89, 89)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "warning": Object {
      "active": Object {
        "base": "rgb(139, 104, 0)",
        "border": "rgb(210, 157, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "base": "rgb(255, 193, 7)",
        "border": "rgb(210, 157, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "base": "rgb(210, 157, 0)",
        "border": "rgb(255, 193, 7)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "base": "rgb(191, 160, 67)",
        "border": "rgb(165, 147, 91)",
        "readable": "rgb(0, 0, 0)",
      },
    },
  },
  "elements": Object {
    "buttons": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "background",
      "cursor": "pointer",
      "font": "control",
      "padding": Object {
        "bottom": "small",
        "left": "medium",
        "right": "medium",
        "top": "small",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
    },
    "controls": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "background",
      "cursor": "default",
      "font": "control",
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
    },
    "grid": Object {
      "columnMin": "280px",
      "gap": "small",
    },
    "links": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "color": "typography",
      "cursor": "pointer",
      "font": "link",
      "padding": Object {
        "bottom": "none",
        "left": "none",
        "right": "none",
        "top": "none",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "states": Object {
        "active": Object {
          "color": "secondary",
        },
        "base": Object {
          "border": Object {
            "bottom": Object {
              "style": "none",
              "width": "none",
            },
            "left": Object {
              "style": "none",
              "width": "none",
            },
            "right": Object {
              "style": "none",
              "width": "none",
            },
            "top": Object {
              "style": "none",
              "width": "none",
            },
          },
          "color": "typography",
          "cursor": "pointer",
          "font": "link",
          "padding": Object {
            "bottom": "none",
            "left": "none",
            "right": "none",
            "top": "none",
          },
          "radius": Object {
            "bottomLeft": "none",
            "bottomRight": "none",
            "topLeft": "none",
            "topRight": "none",
          },
        },
        "hover": Object {
          "color": "primary",
        },
        "inactive": Object {
          "border": Object {
            "bottom": Object {
              "style": "none",
              "width": "none",
            },
            "left": Object {
              "style": "none",
              "width": "none",
            },
            "right": Object {
              "style": "none",
              "width": "none",
            },
            "top": Object {
              "style": "none",
              "width": "none",
            },
          },
          "color": "typography",
          "cursor": "pointer",
          "font": "link",
          "padding": Object {
            "bottom": "none",
            "left": "none",
            "right": "none",
            "top": "none",
          },
          "radius": Object {
            "bottomLeft": "none",
            "bottomRight": "none",
            "topLeft": "none",
            "topRight": "none",
          },
        },
        "selected": Object {
          "border": Object {
            "bottom": Object {
              "style": "none",
              "width": "none",
            },
            "left": Object {
              "style": "none",
              "width": "none",
            },
            "right": Object {
              "style": "none",
              "width": "none",
            },
            "top": Object {
              "style": "none",
              "width": "none",
            },
          },
          "color": "typography",
          "cursor": "pointer",
          "font": "link",
          "padding": Object {
            "bottom": "none",
            "left": "none",
            "right": "none",
            "top": "none",
          },
          "radius": Object {
            "bottomLeft": "none",
            "bottomRight": "none",
            "topLeft": "none",
            "topRight": "none",
          },
        },
        "visited": Object {
          "color": "secondary",
        },
      },
    },
    "nav": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "color": "background",
      "currentItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "solid",
            "width": "tiny",
          },
          "left": Object {
            "style": "none",
            "width": "none",
          },
          "right": Object {
            "style": "none",
            "width": "none",
          },
          "top": Object {
            "style": "none",
            "width": "none",
          },
        },
        "color": "primary",
        "cursor": "default",
        "font": "compact",
        "padding": Object {
          "bottom": "small",
          "left": "medium",
          "right": "medium",
          "top": "small",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
      },
      "cursor": "pointer",
      "font": "compact",
      "padding": Object {
        "bottom": "small",
        "left": "medium",
        "right": "medium",
        "top": "small",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
    },
    "tables": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "background",
      "cursor": "default",
      "font": "compact",
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
    },
  },
  "name": "horns-theme",
  "sizes": Object {
    "giant": "64px",
    "large": "24px",
    "medium": "16px",
    "none": "0px",
    "small": "12px",
    "tiny": "2px",
    "xLarge": "32px",
    "xSmall": "8px",
    "xxLarge": "48px",
    "xxSmall": "4px",
  },
  "typography": Object {
    "code": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Monaco, monospace",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "compact": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "control": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "emphasized": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "h1": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "3.21em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h2": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "2.36em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h3": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.64em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h4": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.29em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h5": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.15em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h6": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "heading": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "label": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "legal": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Times New Roman, serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "0.75em",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "link": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "underline",
        "style": "solid",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "paragraph": Object {
      "align": "justify",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "quote": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "strong": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "text": Object {
      "align": "left",
      "decoration": Object {
        "color": "typography",
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
  },
}
`;
